8154715: Missing destructor and/or TLS clearing calls for terminating threads

Clear TLS on return from thread->run() unless already done. Prohibit asynchronous thread deletion.

Reviewed-by: stefank, sspitsyn