hotspot/src/share/vm/runtime/vmThread.hpp
@@ -104,6 +104,12 @@ class VMThread: public NamedThread {
   // Constructor
   VMThread();
 
+  // No destruction allowed
+  ~VMThread() {
+    guarantee(false, "VMThread deletion must fix the race with VM termination");
+  }
+
+
   // Tester
   bool is_VM_thread() const                      { return true; }
   bool is_GC_thread() const                      { return true; }
